<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="pref_setting"
        android:title="@string/title_setting"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/pref_hide"
            app:summary="@string/hide_summary"
            app:title="@string/hide_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/pref_boot"
            app:summary="@string/boot_summary"
            app:title="@string/boot_title" />
    </PreferenceCategory>
</PreferenceScreen>
