<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp">

    <TextView
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:gravity="center"
        android:text="@string/version_info"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:text="@string/about_app"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:id="@+id/tv_oss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/open_source_licenses_label"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/author"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autoLink="email"
        android:text="@string/email"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>